add logging and fix

--- a/Final_Project_No_Noise_Version.ipynb
+++ b/Final_Project_No_Noise_Version.ipynb
@@ -269,13 +269,13 @@
    },
    "outputs": [],
    "source": [
-    "def prepare_data(dataset_name: str = 'Cora'):\n",
+    "def prepare_data(dataset_name: str = 'Cora', percentage_remove: float = 0.25):\n",
     "  # Step 1: Prepare original edges\n",
     "  dataset = Planetoid(root='data', name=dataset_name)\n",
     "  original_edges = dataset.data.edge_index\n",
     "\n",
     "  # Step 2: Remove a subset of edges\n",
-    "  num_edges_to_remove = int(original_edges.size(1) * 0.25)\n",
+    "  num_edges_to_remove = int(original_edges.size(1) * percentage_remove)\n",
     "  edge_indices = list(range(original_edges.size(1)))\n",
     "  random.shuffle(edge_indices)\n",
     "  removed_edge_indices = edge_indices[:num_edges_to_remove]\n",
@@ -345,9 +345,9 @@
    },
    "outputs": [],
    "source": [
-    "def generate_and_delete_reconstructed_edges(dataset_name: str='Cora'):\n",
+    "def generate_and_delete_reconstructed_edges(dataset_name: str='Cora', percentage_remove: float = 0.25):\n",
     "      # delete new predict and removed one\n",
-    "    dataset, removed_edges, _ = prepare_data(dataset_name=dataset_name)\n",
+    "    dataset, removed_edges, _ = prepare_data(dataset_name=dataset_name, percentage_remove=percentage_remove)\n",
     "    removed_edges_set = set(tuple(sorted((int(u), int(v)))) for u, v in zip(removed_edges[0], removed_edges[1]))\n",
     "    # dataset.data.edge_index = add_noisy_edges(dataset.data.edge_index, num_nodes=dataset.data.num_nodes, noise_ratio=0.001)\n",
     "    print(\"Deleted edges:\", len(removed_edges_set))\n",
@@ -448,7 +448,8 @@
     "        'attention_norm_idx': 0, 'simple': True, 'alpha': 0, 'alpha_dim': 'sc', 'beta_dim': 'sc', \"use_labels\": True,\n",
     "        'hidden_dim': 64, 'block': 'attention', 'function': 'laplacian', 'alpha_sigmoid': True, 'augment': False, 'adjoint': False,\n",
     "        'tol_scale': 70, 'time': 20, 'input_dropout': 0.5, 'dropout': 0.2, 'method': 'dopri5', 'optimizer':'adam', 'lr':0.009, \"use_mlp\": True,\n",
-    "        'decay':0.007, 'epoch':20, 'kinetic_energy':None, 'jacobian_norm2':None, 'total_deriv':None, 'directional_penalty':None, \"beltrami\": False}\n",
+    "        'decay':0.007, 'epoch':20, 'kinetic_energy':None, 'jacobian_norm2':None, 'total_deriv':None, 'directional_penalty':None, \"beltrami\": False,\n",
+    "        'no_early': True}\n",
     "opt[\"fc_out\"] = False\n",
     "opt[\"batch_norm\"] = False\n",
     "opt[\"heads\"] = 8\n",
@@ -501,13 +502,11 @@
     "from collections import defaultdict\n",
     "dataset, removed_edges = generate_and_delete_reconstructed_edges(dataset_name=opt[\"dataset\"])\n",
     "G = to_networkx(dataset.data)\n",
-    "total_tests = 1  # Initial number of test rounds\n",
+    "total_tests = 4  # Initial number of test rounds\n",
     "epsilon = 0.1     # Distance threshold for edge prediction\n",
     "known_edges = to_edge_set(dataset.x)\n",
     "\n",
-    "reconstruction_counter = defaultdict(int)\n",
-    "reconstructed_edges_list = []\n",
-    "new_predicted_counter = defaultdict(int)\n",
+    "\n",
     "\n",
     "num_samples = 50000\n",
     "all_possible = torch.combinations(torch.arange(G.number_of_nodes()), r=2)\n",
@@ -516,9 +515,13 @@
     "candidate_edge_index = sampled_pairs.T\n",
     "\n",
     "best_val_acc = test_acc = best_epoch = 0\n",
-    "\n",
+    "print(\"Working on dataset:\", opt[\"dataset\"], \"started...\\n\")\n",
+    "iteration_results = []\n",
     "for i in range(total_tests):\n",
-    "    dataset, removed_edges = generate_and_delete_reconstructed_edges(dataset_name=opt[\"dataset\"])\n",
+    "    reconstruction_counter = defaultdict(int)\n",
+    "    reconstructed_edges_list = []\n",
+    "    new_predicted_counter = defaultdict(int)\n",
+    "    dataset, removed_edges = generate_and_delete_reconstructed_edges(dataset_name=opt[\"dataset\"], percentage_remove=0.10)\n",
     "    opt['num_feature'] = dataset.data.x.shape\n",
     "    model, dat, val_acc, tmp_test_acc, train_acc, loss = trainModel(opt, dataset)\n",
     "    if val_acc > best_val_acc:\n",
@@ -536,18 +539,16 @@
     "        # Score all candidate edges (e.g., using cosine or dot-product)\n",
     "        scores = score_edges(node_embeddings, candidate_edge_index)\n",
     "\n",
-    "        # (Optional) Score filtering - top 10% most confident scores\n",
-    "        threshold_value = torch.quantile(scores, 0.90)\n",
+    "        threshold_value = torch.quantile(scores, 0.70)\n",
     "        high_score_mask = scores >= threshold_value\n",
     "        high_score_edges = candidate_edge_index[:, high_score_mask]\n",
     "\n",
     "        # Distance-based filtering\n",
     "        # epsilon = torch.quantile(distances, 0.2).item()\n",
     "        # close_mask = distances <= epsilon\n",
-    "\n",
     "        # predicted_edges = high_score_edges[:, close_mask]\n",
     "        distances = torch.norm(node_embeddings[high_score_edges[0]] - node_embeddings[high_score_edges[1]], dim=1)\n",
-    "        epsilon = torch.quantile(distances, 0.3).item()\n",
+    "        epsilon = torch.quantile(distances, 0.30).item()\n",
     "        predicted_edges = high_score_edges[:, distances <= epsilon]\n",
     "\n",
     "\n",
@@ -567,7 +568,10 @@
     "            print(f\"\\nRound {i + 1}, total removed reconstructed: {len(reconstruction_counter.keys())}, \"\n",
     "                  f\"total new reconstructed: {len(new_predicted_counter.keys())}\"\n",
     "                  f\"\\nTotal Weak Edges in round: {len(removed_edges)-len(reconstructed_edges_list)}\")\n",
-    "        print(\"\\n ******************************************* \\n\")"
+    "        print(\"\\n ******************************************* \\n\")\n",
+    "    iteration_results.append({'reconstruction_counter': dict(reconstruction_counter),\n",
+    "                              'new_predicted_counter': dict(new_predicted_counter),\n",
+    "                              'iteration': i + 1})"
    ]
   },
   {
@@ -587,7 +591,7 @@
    },
    "outputs": [],
    "source": [
-    "reconstruction_counter"
+    "iteration_results[1]['reconstruction_counter']"
    ]
   },
   {
@@ -614,7 +618,9 @@
    "source": [
     "# Display the graph of reconstructed edges\n",
     "import plotly.graph_objects as go\n",
-    "\n",
+    "selected_iteration = 1  # Index of the iteration to visualize\n",
+    "reconstruction_counter = iteration_results[selected_iteration]['reconstruction_counter']\n",
+    "new_predicted_counter = iteration_results[selected_iteration]['new_predicted_counter']\n",
     "new_labels = []\n",
     "new_counts = []\n",
     "recovered_labels = []\n",
@@ -669,15 +675,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Create a dictionary from the lists\n",
-    "data = {\n",
-    "    'Edge': recovered_labels + new_labels,\n",
-    "    'Count': recovered_counts + new_counts,\n",
-    "    'Type': ['Recovered'] * len(recovered_labels) + ['New Predicted'] * len(new_labels)\n",
-    "}\n",
-    "\n",
     "# Create a pandas DataFrame\n",
-    "df = pd.DataFrame(data)\n",
+    "df = pd.DataFrame(iteration_results)\n",
     "\n",
     "# Save the DataFrame to a CSV file\n",
     "df.to_csv('edge_reconstruction_data.csv', index=False)\n",
@@ -702,7 +701,7 @@
     "net.from_nx(G)\n",
     "\n",
     "# Highlight reconstructed edges in red\n",
-    "for u, v in reconstructed:\n",
+    "for u, v in iteration_results[1]['reconstruction_counter'].keys():\n",
     "    net.add_edge(int(u), int(v), color='red', width=10)\n",
     "\n",
     "# Optional: change node size or color\n",
@@ -715,6 +714,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Histogram of the testing result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -722,32 +728,12 @@
    },
    "outputs": [],
    "source": [
-    "total_data_to_review = [\n",
-    "  {\n",
-    "    \"iteration\": 1,\n",
-    "    \"total_deleted\": 300,\n",
-    "    \"total_reconstructed\": 180,\n",
-    "    \"new_reconstructed\": 50\n",
-    "  },\n",
-    "  {\n",
-    "    \"iteration\": 2,\n",
-    "    \"total_deleted\": 300,\n",
-    "    \"total_reconstructed\": 200,\n",
-    "    \"new_reconstructed\": 45\n",
-    "  },\n",
-    "  {\n",
-    "    \"iteration\": 3,\n",
-    "    \"total_deleted\": 300,\n",
-    "    \"total_reconstructed\": 190,\n",
-    "    \"new_reconstructed\": 55\n",
-    "  }\n",
-    "]\n",
     "\n",
     "# Extract values\n",
-    "iterations = [entry[\"iteration\"] for entry in total_data_to_review]\n",
-    "deleted = [entry[\"total_deleted\"] for entry in total_data_to_review]\n",
-    "reconstructed = [entry[\"total_reconstructed\"] for entry in total_data_to_review]\n",
-    "new_reconstructed = [entry[\"new_reconstructed\"] for entry in total_data_to_review]\n",
+    "iterations = [entry[\"iteration\"] for entry in iteration_results]\n",
+    "# deleted = [entry[\"deleted\"] for entry in iteration_results]\n",
+    "reconstructed = [len(entry[\"reconstruction_counter\"]) for entry in iteration_results]\n",
+    "new_reconstructed = [len(entry[\"new_predicted_counter\"]) for entry in iteration_results]\n",
     "\n",
     "# Bar chart setup\n",
     "bar_width = 0.25\n",
@@ -756,14 +742,14 @@
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "# Bars\n",
-    "plt.bar(x - bar_width, deleted, width=bar_width, label='Total Deleted')\n",
+    "# plt.bar(x - bar_width, deleted, width=bar_width, label='Total Deleted')\n",
     "plt.bar(x, reconstructed, width=bar_width, label='Total Reconstructed')\n",
     "plt.bar(x + bar_width, new_reconstructed, width=bar_width, label='New Reconstructed')\n",
     "\n",
     "# Labels and ticks\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Number of Edges\")\n",
-    "plt.title(\"Edge Reconstruction Metrics Per Iteration\")\n",
+    "plt.title(\"Edge Reconstruction Metrics Per Iteration :\" + opt[\"dataset\"])\n",
     "plt.xticks(x, [f\"Iter {i}\" for i in iterations])\n",
     "plt.legend()\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
