--- a/Final_Project_No_Noise_Version.ipynb
+++ b/Final_Project_No_Noise_Version.ipynb
@@ -19,7 +19,7 @@
     "!python3.12 -m pip uninstall torch torch_scatter -y\n",
     "!python3.12 -m pip uninstall numpy -y\n",
     "!python3.12 -m pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu\n",
-    "!export MACOSX_DEPLOYMENT_TARGET=10.14\n",
+    "# !export MACOSX_DEPLOYMENT_TARGET=10.14\n",
     "!python3 -m pip install --no-cache-dir torch-scatter -f https://data.pyg.org/whl/torch-2.8.0+cpu.html\n",
     "!python3 -m pip install torch-geometric\n",
     "!python3 -m pip install numba\n",
@@ -478,7 +478,7 @@
     "       'attention_norm_idx': 1, 'attention_rewiring': False, 'attention_type': 'exp_kernel', 'augment': False, \n",
     "       'baseline': False, 'batch_norm': False, 'beltrami': False, 'beta_dim': 'sc', 'block': 'attention', 'cpus': 1, \n",
     "       'data_norm': 'rw', 'dataset': 'Citeseer', 'decay': 0.1, 'directional_penalty': None, 'dropout': 0.7488085003122172, \n",
-    "       'dt': 0.001, 'dt_min': 1e-05, 'epoch': 200, 'exact': True, 'fc_out': False, 'function': 'laplacian',\n",
+    "       'dt': 0.001, 'dt_min': 1e-05, 'epoch': 20, 'exact': True, 'fc_out': False, 'function': 'laplacian',\n",
     "       'gdc_avg_degree': 64, 'gdc_k': 128, 'gdc_method': 'ppr', 'gdc_sparsification': 'topk', 'gdc_threshold': 0.01, 'gpus': 1.0,\n",
     "       'grace_period': 20, 'heads': 8, 'heat_time': 3.0, 'hidden_dim': 80, 'input_dropout': 0.6803233752085334, 'jacobian_norm2': None, \n",
     "       'kinetic_energy': None, 'label_rate': 0.5, 'leaky_relu_slope': 0.5825086997804176, 'lr': 0.00863585231323069, 'max_epochs': 1000,\n",
@@ -502,7 +502,7 @@
     "from collections import defaultdict\n",
     "dataset, removed_edges = generate_and_delete_reconstructed_edges(dataset_name=opt[\"dataset\"])\n",
     "G = to_networkx(dataset.data)\n",
-    "total_tests = 4  # Initial number of test rounds\n",
+    "total_tests = 5  # Initial number of test rounds\n",
     "epsilon = 0.1     # Distance threshold for edge prediction\n",
     "known_edges = to_edge_set(dataset.x)\n",
     "\n",
@@ -539,7 +539,7 @@
     "        # Score all candidate edges (e.g., using cosine or dot-product)\n",
     "        scores = score_edges(node_embeddings, candidate_edge_index)\n",
     "\n",
-    "        threshold_value = torch.quantile(scores, 0.70)\n",
+    "        threshold_value = torch.quantile(scores, 0.90)\n",
     "        high_score_mask = scores >= threshold_value\n",
     "        high_score_edges = candidate_edge_index[:, high_score_mask]\n",
     "\n",
@@ -563,14 +563,15 @@
     "                reconstructed_edges_list.append(edge)\n",
     "            else:\n",
     "                new_predicted_counter[edge] += 1\n",
-    "\n",
+    "        \n",
     "        if len(reconstruction_counter) and len(new_predicted_counter):\n",
     "            print(f\"\\nRound {i + 1}, total removed reconstructed: {len(reconstruction_counter.keys())}, \"\n",
     "                  f\"total new reconstructed: {len(new_predicted_counter.keys())}\"\n",
     "                  f\"\\nTotal Weak Edges in round: {len(removed_edges)-len(reconstructed_edges_list)}\")\n",
     "        print(\"\\n ******************************************* \\n\")\n",
     "    iteration_results.append({'reconstruction_counter': dict(reconstruction_counter),\n",
-    "                              'new_predicted_counter': dict(new_predicted_counter),\n",
+    "                              'weak_edges_counter': dict(removed_edges - set(reconstructed_edges_list)),\n",
+    "                             'new_predicted_counter': dict(new_predicted_counter),\n",
     "                              'iteration': i + 1})"
    ]
   },
@@ -621,20 +622,39 @@
     "selected_iteration = 1  # Index of the iteration to visualize\n",
     "reconstruction_counter = iteration_results[selected_iteration]['reconstruction_counter']\n",
     "new_predicted_counter = iteration_results[selected_iteration]['new_predicted_counter']\n",
+    "weak_edges_counter = iteration_results[selected_iteration]['weak_edges_counter']\n",
     "new_labels = []\n",
     "new_counts = []\n",
     "recovered_labels = []\n",
     "recovered_counts = []\n",
+    "weak_labels = []\n",
+    "weak_counts = []\n",
+    "\n",
+    "def edge_to_label(edge):\n",
+    "    \"\"\"Robustly produce a label string for edge which may be tuple, list, tensor or int.\"\"\"\n",
+    "    try:\n",
+    "        # Try unpacking (works for tuple/list/1D tensors/arrays)\n",
+    "        u, v = edge\n",
+    "        return f\"{int(u)}-{int(v)}\"\n",
+    "    except Exception:\n",
+    "        # Fallback: single value or non-subscriptable -> string representation\n",
+    "        return str(int(edge)) if (isinstance(edge, (int,)) or (hasattr(edge, \"dtype\") and getattr(edge, \"dtype\").kind in \"iu\")) else str(edge)\n",
     "\n",
     "for edge, count in reconstruction_counter.items():\n",
-    "    label = f\"{edge[0]}-{edge[1]}\"\n",
+    "    label = edge_to_label(edge)\n",
     "    recovered_labels.append(label)\n",
     "    recovered_counts.append(count)\n",
     "\n",
     "for edge, count in new_predicted_counter.items():\n",
-    "    label = f\"{edge[0]}-{edge[1]}\"\n",
+    "    label = edge_to_label(edge)\n",
     "    new_labels.append(label)\n",
     "    new_counts.append(count)\n",
+    "\n",
+    "for edge, count in weak_edges_counter.items():\n",
+    "    # weak_edges_counter may use single ints as keys; handle both cases\n",
+    "    label = edge_to_label(edge)\n",
+    "    weak_labels.append(label)\n",
+    "    weak_counts.append(count)\n",
     "# Plotly bar chart\n",
     "fig = go.Figure()\n",
     "\n",
@@ -652,8 +672,15 @@
     "    marker_color='orange'\n",
     "))\n",
     "\n",
+    "fig.add_trace(go.Bar(\n",
+    "    x=weak_labels,\n",
+    "    y=weak_counts,\n",
+    "    name='Weak Edges (Not Recovered)',\n",
+    "    marker_color='lightgrey'\n",
+    "))\n",
+    "\n",
     "fig.update_layout(\n",
-    "    title=\"Edge Reconstruction vs New Predictions\",\n",
+    "    title=\"Edge Reconstruction vs New Predictions vs Weak Edges, Total Iteration:\" + str(total_tests),\n",
     "    xaxis_title=\"Edge (u-v)\",\n",
     "    yaxis_title=\"Reconstruction Count\",\n",
     "    barmode='group',\n",
@@ -734,7 +761,7 @@
     "# deleted = [entry[\"deleted\"] for entry in iteration_results]\n",
     "reconstructed = [len(entry[\"reconstruction_counter\"]) for entry in iteration_results]\n",
     "new_reconstructed = [len(entry[\"new_predicted_counter\"]) for entry in iteration_results]\n",
-    "\n",
+    "weak_edges = [len(entry[\"weak_edges_counter\"]) for entry in iteration_results]\n",
     "# Bar chart setup\n",
     "bar_width = 0.25\n",
     "x = np.arange(len(iterations))\n",
@@ -745,11 +772,11 @@
     "# plt.bar(x - bar_width, deleted, width=bar_width, label='Total Deleted')\n",
     "plt.bar(x, reconstructed, width=bar_width, label='Total Reconstructed')\n",
     "plt.bar(x + bar_width, new_reconstructed, width=bar_width, label='New Reconstructed')\n",
-    "\n",
+    "plt.bar(x + 0.5*bar_width, weak_edges, width=bar_width, label='Weak Edges (Not Reconstructed)')\n",
     "# Labels and ticks\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Number of Edges\")\n",
-    "plt.title(\"Edge Reconstruction Metrics Per Iteration :\" + opt[\"dataset\"])\n",
+    "plt.title(\"Edge Reconstruction Metrics Per Iteration :\" + opt[\"dataset\"] + \" total Iterations \" + str(total_tests))\n",
     "plt.xticks(x, [f\"Iter {i}\" for i in iterations])\n",
     "plt.legend()\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
