--- a/Final_Project_No_Noise_Version.ipynb
+++ b/Final_Project_No_Noise_Version.ipynb
@@ -66,7 +66,8 @@
     "from GNN import GNN\n",
     "from mutual import get_optimizer, train\n",
     "from mutual import test as test_model\n",
-    "import random"
+    "import random\n",
+    "import yaml"
    ]
   },
   {
@@ -75,8 +76,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for other pc launch this\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n"
+    "def load_config(base_path, override_path):\n",
+    "    with open(base_path) as f:\n",
+    "        base = yaml.safe_load(f)\n",
+    "    with open(override_path) as f:\n",
+    "        override = yaml.safe_load(f)\n",
+    "\n",
+    "    base.update(override)\n",
+    "    return base"
    ]
   },
   {
@@ -490,6 +497,18 @@
     "       'rewiring': None, 'rw_addD': 0.02, 'rw_rmvR': 0.02, 'self_loop_weight': 1, 'sparsify': 'S_hat', 'square_plus': True,\n",
     "       'step_size': 1, 'threshold_type': 'addD_rvR', 'time': 7.874113442879092, 'tol_scale': 2.9010446330432815, 'tol_scale_adjoint': 1.0, \n",
     "       'total_deriv': None, 'use_cora_defaults': False, 'use_flux': False, 'use_labels': True, 'use_lcc': True, 'use_mlp': False, 'no_early': True}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = load_config(\"configs/base.yaml\", \"configs/pubmed.yaml\")\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f'Using device: {device}')\n",
+    "print(f'Dataset: {opt[\"dataset\"]}')"
    ]
   },
   {
@@ -1148,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
