--- a/Final_Project_No_Noise_Version.ipynb
+++ b/Final_Project_No_Noise_Version.ipynb
@@ -90,34 +90,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "aH6gIcdWvcGM"
-   },
-   "outputs": [],
-   "source": [
-    "opt = {'self_loop_weight': 1, 'leaky_relu_slope': 0.2, 'heads': 2, 'K': 10, 'not_lcc': True, 'dataset': 'Cora', 'force_reload': True,\n",
-    "        'attention_norm_idx': 0, 'simple': True, 'alpha': 0, 'alpha_dim': 'sc', 'beta_dim': 'sc', \"use_labels\": True,\n",
-    "        'hidden_dim': 64, 'block': 'rewire_attention', 'function': 'laplacian', 'alpha_sigmoid': True, 'augment': False, 'adjoint': False,\n",
-    "        'tol_scale': 70, 'time': 20, 'input_dropout': 0.5, 'dropout': 0.2, 'method': 'dopri5', 'optimizer':'adam', 'lr':0.008, \"use_mlp\": True,\n",
-    "        'decay':0.007, 'epoch':20, 'kinetic_energy':None, 'jacobian_norm2':None, 'total_deriv':None, 'directional_penalty':None, \"beltrami\": False}\n",
-    "opt[\"batch_norm\"] = False\n",
-    "opt[\"heads\"] = 8\n",
-    "opt[\"attention_dim\"] = 128\n",
-    "opt['attention_type'] = 'scaled_dot'\n",
-    "opt['label_rate'] = 0.5\n",
-    "opt['square_plus'] = True\n",
-    "opt['reweight_attention'] = False\n",
-    "opt['step_size'] = 1\n",
-    "opt['max_nfe'] = 5000\n",
-    "opt['no_alpha_sigmoid'] = False\n",
-    "opt['add_source'] = False\n",
-    "opt['fc_out'] = False\n",
-    "opt['att_samp_pct'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "JoBfaO0tSodU"
    },
    "outputs": [],
@@ -392,54 +364,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# PUBMED DATASET OP\n",
-    "opt = {'M_nodes': 64, 'adaptive': False, 'add_source': True, 'adjoint': True, 'adjoint_method': 'adaptive_heun', \n",
-    "       'adjoint_step_size': 1, 'alpha': 1.0, 'alpha_dim': 'sc', 'att_samp_pct': 1, 'attention_dim': 128, 'attention_norm_idx': 0,\n",
-    "         'attention_rewiring': False, 'attention_type': 'cosine_sim', 'augment': False, 'baseline': False, 'batch_norm': False, \n",
-    "         'beltrami': False, 'beta_dim': 'sc', 'block': 'rewire_attention', 'cpus': 1, 'data_norm': 'rw', 'dataset': 'Pubmed', \n",
-    "         'decay': 0.0018236722171703636, 'directional_penalty': None, 'dropout': 0.07191100715473969, 'dt': 0.001, \n",
-    "         'dt_min': 1e-05, 'epoch': 600, 'exact': False, 'fc_out': False, 'feat_hidden_dim': 64, \n",
-    "         'function': 'laplacian', 'gdc_avg_degree': 64, 'gdc_k': 64, 'gdc_method': 'ppr', 'gdc_sparsification': 'topk',\n",
-    "           'gdc_threshold': 0.01, 'gpus': 1.0, 'grace_period': 20, 'heads': 1, 'heat_time': 3.0, 'hidden_dim': 64,\n",
-    "             'input_dropout': 0.5, 'jacobian_norm2': None, 'kinetic_energy': None, 'label_rate': 0.5, 'leaky_relu_slope': 0.2, \n",
-    "             'lr': 0.0095, 'max_epochs': 120, 'max_iters': 100, 'max_nfe': 5000, 'method': 'dopri5',\n",
-    "               'metric': 'test_acc', 'mix_features': False, 'name': None, 'new_edges': 'random', 'no_alpha_sigmoid': False,\n",
-    "                 'not_lcc': True, 'num_init': 1, 'num_samples': 400, 'num_splits': 8, 'ode_blocks': 1, 'optimizer': 'adamax', \n",
-    "                 'patience': 50, 'pos_enc_dim': 'row', 'pos_enc_hidden_dim': 16, 'ppr_alpha': 0.05, 'reduction_factor': 10,\n",
-    "                   'regularise': False, 'reweight_attention': False, 'rewire_KNN': False, 'rewire_KNN_T': 'T0', \n",
-    "                   'rewire_KNN_epoch': 10, 'rewire_KNN_k': 64, 'rewire_KNN_sym': False, 'rewiring': None, 'rw_addD': 0.02, \n",
-    "                   'rw_rmvR': 0.02, 'self_loop_weight': 1, 'sparsify': 'S_hat', 'square_plus': True, 'step_size': 1,\n",
-    "                     'threshold_type': 'addD_rvR', 'time': 12.942327880200853, 'tol_scale': 1991.0688305523001, \n",
-    "                     'tol_scale_adjoint': 16324.368093998313, 'total_deriv': None, 'use_cora_defaults': False, 'use_flux': False, \n",
-    "                     'use_labels': False, 'use_lcc': True, 'use_mlp': False, 'folder': 'pubmed_linear_att_beltrami_adj2', 'index': 0,\n",
-    "                       'run_with_KNN': False, 'change_att_sim_type': False, 'reps': 1, 'max_test_steps': 100, 'no_early': True,\n",
-    "                         'earlystopxT': 5.0, 'pos_enc_csv': False, 'pos_enc_type': 'GDC'}\n",
-    "opt.update({\n",
-    "    'lr': 0.005,\n",
-    "    'optimizer': 'adam',\n",
-    "    'hidden_dim': 128,\n",
-    "    'feat_hidden_dim': 64,\n",
-    "    'dropout': 0.3,\n",
-    "    'input_dropout': 0.3,\n",
-    "    'decay': 0.0005,\n",
-    "    'max_epochs': 150,\n",
-    "    'patience': 50,\n",
-    "    'method': 'dopri5',\n",
-    "    'max_nfe': 100000,\n",
-    "    'tol_scale': 1e-3,\n",
-    "    'tol_scale_adjoint': 1e-3,\n",
-    "    'att_samp_pct': 1.0,\n",
-    "    'rw_addD': 0.005,\n",
-    "    'rw_rmvR': 0.005,\n",
-    "    'heads': 4,\n",
-    "    'use_labels': True,\n",
-    "    'block': 'rewire_attention'\n",
-    "})\n"
+    "# Set Dataset Parameterize"
    ]
   },
   {
@@ -448,64 +376,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CORA DATASET OPT\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "opt = {'self_loop_weight': 1, 'leaky_relu_slope': 0.2, 'heads': 2, 'K': 10, 'not_lcc': True, 'dataset': 'Cora', 'force_reload': True,\n",
-    "        'attention_norm_idx': 0, 'simple': True, 'alpha': 0, 'alpha_dim': 'sc', 'beta_dim': 'sc', \"use_labels\": True,\n",
-    "        'hidden_dim': 64, 'block': 'attention', 'function': 'laplacian', 'alpha_sigmoid': True, 'augment': False, 'adjoint': False,\n",
-    "        'tol_scale': 70, 'time': 20, 'input_dropout': 0.5, 'dropout': 0.2, 'method': 'dopri5', 'optimizer':'adam', 'lr':0.009, \"use_mlp\": True,\n",
-    "        'decay':0.007, 'epoch':20, 'kinetic_energy':None, 'jacobian_norm2':None, 'total_deriv':None, 'directional_penalty':None, \"beltrami\": False,\n",
-    "        'no_early': True}\n",
-    "opt[\"fc_out\"] = False\n",
-    "opt[\"batch_norm\"] = False\n",
-    "opt[\"heads\"] = 8\n",
-    "opt[\"attention_dim\"] = 128\n",
-    "opt['attention_type'] = 'scaled_dot'\n",
-    "opt['label_rate'] = 0.5\n",
-    "opt['square_plus'] = True\n",
-    "opt['reweight_attention'] = False\n",
-    "opt['step_size'] = 1\n",
-    "opt['max_nfe'] = 5000\n",
-    "opt['no_alpha_sigmoid'] = False\n",
-    "opt['add_source'] = False\n",
-    "opt['dataset'] = 'Cora'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CITESEER DATASET OPT\n",
-    "opt = {'M_nodes': 64, 'adaptive': False, 'add_source': True, 'adjoint': False, 'adjoint_method': 'adaptive_heun', \n",
-    "       'adjoint_step_size': 1, 'alpha': 1.0, 'alpha_dim': 'sc', 'att_samp_pct': 1, 'attention_dim': 32, \n",
-    "       'attention_norm_idx': 1, 'attention_rewiring': False, 'attention_type': 'exp_kernel', 'augment': False, \n",
-    "       'baseline': False, 'batch_norm': False, 'beltrami': False, 'beta_dim': 'sc', 'block': 'attention', 'cpus': 1, \n",
-    "       'data_norm': 'rw', 'dataset': 'Citeseer', 'decay': 0.1, 'directional_penalty': None, 'dropout': 0.7488085003122172, \n",
-    "       'dt': 0.001, 'dt_min': 1e-05, 'epoch': 20, 'exact': True, 'fc_out': False, 'function': 'laplacian',\n",
-    "       'gdc_avg_degree': 64, 'gdc_k': 128, 'gdc_method': 'ppr', 'gdc_sparsification': 'topk', 'gdc_threshold': 0.01, 'gpus': 1.0,\n",
-    "       'grace_period': 20, 'heads': 8, 'heat_time': 3.0, 'hidden_dim': 80, 'input_dropout': 0.6803233752085334, 'jacobian_norm2': None, \n",
-    "       'kinetic_energy': None, 'label_rate': 0.5, 'leaky_relu_slope': 0.5825086997804176, 'lr': 0.00863585231323069, 'max_epochs': 1000,\n",
-    "       'max_iters': 100, 'max_nfe': 3000, 'method': 'dopri5', 'metric': 'accuracy', 'mix_features': False, 'name': 'Citeseer_beltrami_1_KNN',\n",
-    "       'new_edges': 'random', 'no_alpha_sigmoid': False, 'not_lcc': True, 'num_class': 6, 'num_init': 2,\n",
-    "       'num_nodes': 2120, 'num_samples': 400, 'num_splits': 1, 'ode_blocks': 1, 'optimizer': 'adam', 'patience': 100, \n",
-    "       'pos_enc_dim': 'row', 'pos_enc_hidden_dim': 16, 'ppr_alpha': 0.05, 'reduction_factor': 4, 'regularise': False,\n",
-    "       'reweight_attention': False, 'rewire_KNN': False, 'rewire_KNN_epoch': 10, 'rewire_KNN_k': 64, 'rewire_KNN_sym': False,\n",
-    "       'rewiring': None, 'rw_addD': 0.02, 'rw_rmvR': 0.02, 'self_loop_weight': 1, 'sparsify': 'S_hat', 'square_plus': True,\n",
-    "       'step_size': 1, 'threshold_type': 'addD_rvR', 'time': 7.874113442879092, 'tol_scale': 2.9010446330432815, 'tol_scale_adjoint': 1.0, \n",
-    "       'total_deriv': None, 'use_cora_defaults': False, 'use_flux': False, 'use_labels': True, 'use_lcc': True, 'use_mlp': False, 'no_early': True}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opt = load_config(\"configs/base.yaml\", \"configs/pubmed.yaml\")\n",
+    "# dataset_name = \"pubmed\" # \"cora\" or \"citeseer\"\n",
+    "# opt = load_config(\"configs/base.yaml\", f\"configs/{dataset_name}.yaml\")\n",
+    "with open(\"configs/generic.yaml\") as f:\n",
+    "    opt = yaml.safe_load(f)\n",
+    "opt[\"dataset\"] = \"pubmed\"   # or Pubmed / Citeseer\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f'Using device: {device}')\n",
     "print(f'Dataset: {opt[\"dataset\"]}')"
@@ -517,16 +392,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from collections import defaultdict\n",
     "dataset, removed_edges = generate_and_delete_reconstructed_edges(dataset_name=opt[\"dataset\"])\n",
     "G = to_networkx(dataset.data)\n",
     "total_tests = 5  # Initial number of test rounds\n",
     "epsilon = 0.1     # Distance threshold for edge prediction\n",
     "known_edges = to_edge_set(dataset.x)\n",
-    "\n",
-    "\n",
-    "\n",
     "num_samples = 50000\n",
     "all_possible = torch.combinations(torch.arange(G.number_of_nodes()), r=2)\n",
     "perm = torch.randperm(all_possible.size(0))[:num_samples]\n",
@@ -611,7 +482,7 @@
    },
    "outputs": [],
    "source": [
-    "iteration_results[1]['reconstruction_counter']"
+    "iteration_results[3]['reconstruction_counter']"
    ]
   },
   {
